--- a/Style.css
+++ b/Style.css
@@ -1,66 +1,50 @@
-::selection{background-color:#0072af;color:#fff}
-body{
-    color:#fff;
-    margin: 0;
-    padding: 0;
-    direction: rtl;
-    text-decoration:none!important;
-    font-family:Changa!important;
-background: linear-gradient(359deg, #000, #295bbd);
-background-size: 400% 400%;
-
--webkit-animation: AnimationName 0s ease infinite;
--moz-animation: AnimationName 0s ease infinite;
-animation: AnimationName 0s ease infinite;
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:61% 0%}
-    50%{background-position:40% 100%}
-    100%{background-position:61% 0%}
+::selection {
+background-color : #0072af;
+color : #fff;
 }
-@-moz-keyframes AnimationName {
-    0%{background-position:61% 0%}
-    50%{background-position:40% 100%}
-    100%{background-position:61% 0%}
+body {
+color : #fff;
+margin : 0;
+padding : 0;
+direction : rtl;
+text-decoration : none !important ;
+font-family : Changa !important ;
+background : linear-gradient(359deg, #000, #295bbd);
+background-size : 400% 400%;
+animation : AnimationName 0s ease infinite;
 }
-@keyframes AnimationName { 
-    0%{background-position:61% 0%}
-    50%{background-position:40% 100%}
-    100%{background-position:61% 0%}
-}
-    }
 strong {
-    font-family: Changa;
-    font-size: 25px;
-    margin: 0 auto;
-    text-align: center;
-    color: #fff;
-    font-weight: 500!important;
+font-family : Changa;
+font-size : 25px;
+margin : 0 auto;
+text-align : center;
+color : #fff;
+font-weight : 500 !important ;
 }
 .Header {
-    font-family: Changa;
-    text-align: center;
-    margin-bottom: 10px;
-    margin-top: 12px;
+font-family : Changa;
+text-align : center;
+margin-bottom : 10px;
+margin-top : 12px;
 }
 img {
-    width: 70%;
-    height: auto;
-    border: 1px solid #fff0;
-    margin-top: 10px;
-    text-align: center;
-    margin: 0 auto;
-    max-height: 520px;
-    border-left: 8px solid #fff0;
-    border-bottom-left-radius: 30px;
-    border-right: 8px solid #fff0;
-    border-top-right-radius: 30px;
-    margin-bottom: 10px;
+width : 70%;
+height : auto;
+margin-top : 10px;
+text-align : center;
+margin : 0 auto;
+max-height : 520px;
+border-bottom-left-radius : 30px;
+border-top-right-radius : 30px;
+margin-bottom : 10px;
 }
-
 @media only screen and (max-width:900px) {
-    img {width: 90%;}
-    } 
+img {
+width : 90%;
+}
+}
 @media only screen and (max-width:460px) {
-    img {width: 97%;}
-    } 
+img {
+width : 97%;
+}
+}
